  * translate Acceptance column (simplify): "funded" -> "unlinked", "received" -> "linked"
  * bugfix: ignore unresolvable tipping_comment_ids
  * set tip amount text only if parsed correctly
  * parse tip amount text even on paid tips (for example during import process), but still do not evaluate amount_bch, amount_usd

+++

1.0-beta16:

  * better error handling in reddit poll loop (recover from connection issues)
  * improve amount parser ("1 cent." now works, for example)
  * better info when autopay fails on wallets with pw
  * simplify tiplist (remove unneeded columns)
  * "tip amount text" fixed for <currency_symbol><decimal> (was empty)
  * "ChainTip" column -> "Stealth" column (only showing "<stealth>" or "")
 
1.0-beta15:

  * errors during initial import are reported to user and output to console
  * chaintip comment association fixed
  * new status "autopaying..." to help avoid double-payments

1.0-beta14:

  * persist list of tips to wallet file
  * new "import" procedure to initially fill list of tips (if empty or old version)
  * make activation/reactivation through status bar button more robust (no more crash)
  * remove all existing "mark read", "mark unread" functions and automatically marking finished tips
  * new preference "mark read when digested"
  * changes to autopay logic (more wait periods to wait for blockchain info)
  * new "remove" function to remove tips from list
  * new "copy recipient address(es)" function


1.0-beta13:

  * fix bug with update_checker always thinking there's a new version
  * do not run update_checker before chaintipper activation



1.0-beta12:

  * listen to blockchain instead of only connected wallet for payments
  * open blockexplorer to payment tx (#1, #2, #3), remove old tip.payment_txhash
  * parse chaintip confirmation comment
  * performance improvement
  * fix claim/return registration
  * use same association scheme for confirmation comments as for claim/return