@@ -9,6 +9,7 @@
 	* beta n
 
     * some "linked", "paid" are not gray, why?
+		* |655.439| |12| [Reddit] fetchTippingComments(): reddit.info(['t1_h59tenp', 't1_h3ks7eg'])
 
 	* beta n+1
 
