@@ -5,6 +5,7 @@
   * bugfix: ignore unresolvable tipping_comment_ids
   * set tip amount text only if parsed correctly
   * parse tip amount text even on paid tips (for example during import process), but still do not evaluate amount_bch, amount_usd
+  * change isFinished() (greying out) logic to not look at the removed Chaintip column any more
 
 +++
 
